envoy.yaml
# Copyright 2022 Google LLC
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#      http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

static_resources:
  listeners:
  - name: main
    address:
      socket_address:
        address: 0.0.0.0
        port_value: 10000
    filter_chains:
      - filters:
          - name: envoy.filters.network.http_connection_manager
            typed_config:
              "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
              stat_prefix: ingress_http
              codec_type: AUTO
              route_config:
                name: local_routes
                virtual_hosts:
                  - name: local_service
                    domains:
                      - "*"
                    routes:
                      - match:
                          prefix: "/"
                          headers:
                            - name: "x-gateway-model-name"
                              string_match:
                                exact: "gpt-4.1"
                        route:
                          cluster: upstream-a
                      - match:
                          prefix: "/"
                        route:
                          cluster: upstream-b
              http_filters:
                - name: envoy.filters.http.ext_proc
                  typed_config:
                    "@type": "type.googleapis.com/envoy.extensions.filters.http.ext_proc.v3.ExternalProcessor"
                    failure_mode_allow: false
                    processing_mode:
                      request_header_mode: "SEND"
                      response_header_mode: "SEND"
                      request_body_mode: "BUFFERED"
                      response_body_mode: "BUFFERED"
                      request_trailer_mode: "SKIP"
                      response_trailer_mode: "SKIP"
                    grpc_service:
                      envoy_grpc:
                        cluster_name: ext-proc
                - name: envoy.filters.http.router
                  typed_config:
                    "@type": type.googleapis.com/envoy.extensions.filters.http.router.v3.Router
  clusters:
    - name: upstream-a
      connect_timeout: 0.25s
      type: STRICT_DNS
      lb_policy: round_robin
      load_assignment:
        cluster_name: upstream-a
        endpoints:
        - lb_endpoints:
          - endpoint:
              address:
                socket_address:
                  address: upstream-a
                  port_value: 80
    - name: upstream-b
      connect_timeout: 0.25s
      type: STRICT_DNS
      lb_policy: round_robin
      load_assignment:
        cluster_name: upstream-b
        endpoints:
        - lb_endpoints:
          - endpoint:
              address:
                socket_address:
                  address: upstream-b
                  port_value: 80
    - name: ext-proc
      connect_timeout: 3s
      type: STRICT_DNS
      lb_policy: round_robin
      typed_extension_protocol_options:
        envoy.extensions.upstreams.http.v3.HttpProtocolOptions:
          "@type": type.googleapis.com/envoy.extensions.upstreams.http.v3.HttpProtocolOptions
          explicit_http_config:
            http2_protocol_options: {}
      load_assignment:
        cluster_name: ext-proc
        endpoints:
          - lb_endpoints:
              - endpoint:
                  address:
                    socket_address:
                      address: ext-proc
                      port_value: 50051
